test/block_3.jk
var a = 1;
{
    // var a = a + 2;  // error: redefinition of 'a'
    var b = a + 2;
    print b;
    a = 3;
}
print a;